--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -7,88 +7,138 @@ external-controller: 0.0.0.0:9090
 proxies:
   - &id001
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
-    type: vmess
-    server: 2bbiozh7wbc.servecounterstrike.com
-    port: 2083
-    cipher: auto
-    uuid: 9e9b80f1-5555-4f7d-a209-d23b9d9dc047
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: SnsksKaa.mookomeilz.homes
-    network: ws
-    ws-opts:
-      path: /snsk
-      headers:
-        host: PAneljadid.mookoMEilz.homes
-  - &id002
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
-    type: vmess
-    server: 104.19.154.92
-    port: 2083
-    cipher: auto
-    uuid: 9e9b80f1-5555-4f7d-a209-d23b9d9dc047
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: SnsksKaa.mookomeilz.homes
-    network: ws
-    ws-opts:
-      path: /snsk
-      headers:
-        host: PAneljadid.mookoMEilz.homes
-  - &id003
-    name: 🇺🇸_US_美国_1
-    type: ss
-    server: 54.188.25.27
+    type: vless
+    server: 104.17.88.212
     port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id004
-    name: 🇳🇱_NL_荷兰_1
-    type: ss
-    server: 51.15.27.48
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id005
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
-    type: vmess
-    server: web.parspack.com
-    port: 80
-    cipher: auto
-    uuid: 7fc27c1c-5052-4d6b-8099-1a8c04f1cd7b
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
+    uuid: 376b9861-2fc6-4647-959c-18185cd9c95a
+    tls: true
+    servername: lmn37.sbs
     network: ws
     ws-opts:
-      path: /?ed=2048
-      headers:
-        host: PArspAcK51.eSMAILkOrEA.sHoP
-  - &id006
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: singapore.com
-    port: 2052
-    cipher: auto
-    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
+      path: /fflsws
+  - &id002
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+    type: vless
+    server: 198.41.216.9
+    port: 443
+    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
+    tls: true
+    servername: xray1.freegradely.xyz
+    network: ws
+    ws-opts:
+      path: /bodhws
+  - &id003
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+    type: vless
+    server: 198.41.216.129
+    port: 443
+    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
+    tls: true
+    servername: xray1.freegradely.xyz
+    network: ws
+    ws-opts:
+      path: /bodhws
+  - &id004
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
+    type: vless
+    server: 104.25.70.63
+    port: 443
+    uuid: a0cdf51b-e97d-4e87-9976-ed272b617c09
+    tls: true
+    servername: dl165.vipiroshd.shop
+    network: ws
+    ws-opts:
+      path: /apiapp
+  - &id005
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
+    type: vless
+    server: 104.17.225.199
+    port: 2083
+    uuid: 00a7ef02-f88c-45ff-be76-cf50c37d05a6
+    tls: true
+    servername: kingofilter.hamedgeek.sbs
     network: ws
     ws-opts:
       path: /
+  - &id006
+    name: 🇺🇸_US_美国_1
+    type: trojan
+    server: 89.116.161.133
+    port: 443
+    udp: true
+    password: 56e1f11c-1217-46ab-b127-6afbc23bafba
+    sni: p1us1.pqjc.buzz
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /pq/us1
       headers:
-        host: mg_cdn.yunjisuan.cf
+        host: p1us1.pqjc.buzz
   - &id007
-    name: 🇵🇦_PA_巴拿马
-    type: ss
-    server: 138.186.142.4
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_4
+    type: vless
+    server: 104.25.70.67
+    port: 443
+    uuid: 9016f911-e576-4c5e-d85c-f3144633021e
+    tls: true
+    servername: 4ash.vipjnamasha.store
+    network: ws
+    ws-opts:
+      path: /apiapp
   - &id008
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_5
+    type: vless
+    server: 104.18.202.232
+    port: 2096
+    uuid: 6807c545-8ae7-4e0a-860c-56fc9ca527f1
+    tls: true
+    servername: test.saeedgalaxy.xyz
+    network: ws
+    ws-opts:
+      path: /ws
+  - &id009
+    name: 🇩🇪_DE_德国_1
+    type: trojan
+    server: 5.104.108.109
+    port: 443
+    udp: true
+    password: 56e1f11c-1217-46ab-b127-6afbc23bafba
+    sni: 20-24-33-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id010
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_6
+    type: vless
+    server: 104.25.70.61
+    port: 443
+    uuid: a0cdf51b-e97d-4e87-9976-ed272b617c09
+    tls: true
+    servername: dl165.vipiroshd.shop
+    network: ws
+    ws-opts:
+      path: /apiapp
+  - &id011
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+    type: vless
+    server: 104.19.212.163
+    port: 443
+    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
+    tls: true
+    servername: xray1.freegradely.xyz
+    network: ws
+    ws-opts:
+      path: /bodhws
+  - &id012
+    name: 🇩🇪_DE_德国_2
+    type: trojan
+    server: 5.104.108.120
+    port: 443
+    udp: true
+    password: 56e1f11c-1217-46ab-b127-6afbc23bafba
+    sni: 20-24-33-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id013
     name: 🇺🇸_US_美国->🇺🇦_UA_乌克兰_1
     type: vmess
     server: 104.17.2.183
@@ -103,7 +153,7 @@ proxies:
       path: /
       headers:
         host: v3ra3do.wakeuptimerap.shop
-  - &id009
+  - &id014
     name: 🇺🇸_US_美国->🇺🇦_UA_乌克兰_2
     type: vmess
     server: glasco.fx-trader.shop
@@ -118,63 +168,20 @@ proxies:
       path: /
       headers:
         host: v3ra3do.wakeuptimerap.shop
-  - &id010
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: a3.bcbot.in
-    port: 8880
-    cipher: auto
-    uuid: ce9aadc8-8c6e-4867-d247-9a84b469ac27
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: a3.bcbot.in
-  - &id011
+  - &id015
     name: 🇫🇷_FR_法国_1
     type: ss
     server: 195.154.169.198
     port: 989
     password: f8f7aCzcPKbsF8p3
     cipher: aes-256-cfb
-  - &id012
-    name: 🇧🇦_BA_波黑
-    type: ss
-    server: 185.164.35.9
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id013
-    name: 🇫🇷_FR_法国_2
-    type: ss
-    server: 195.154.185.174
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id014
-    name: 🇺🇸_US_美国_4
+  - &id016
+    name: 🇺🇸_US_美国_2
     type: ss
     server: 212.102.47.198
     port: 443
     password: shadowsocks
     cipher: aes-128-cfb
-  - &id015
-    name: 🇫🇷_FR_法国_3
-    type: ss
-    server: 51.159.111.208
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id016
-    name: 🇲🇽_MX_墨西哥
-    type: ss
-    server: 190.103.179.23
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
   - &id017
     name: 🇪🇸_ES_西班牙
     type: ss
@@ -183,74 +190,7 @@ proxies:
     password: f8f7aCzcPKbsF8p3
     cipher: aes-256-cfb
   - &id018
-    name: 🇬🇧_GB_英国
-    type: ss
-    server: 77.72.5.113
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id019
-    name: 🇳🇱_NL_荷兰_2
-    type: vmess
-    server: 91.242.229.77
-    port: 80
-    cipher: auto
-    uuid: 56890326-df58-432d-be1e-67064e2b4355
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: nl2.xv2ray.net
-  - &id020
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 104.17.184.241
-    port: 80
-    cipher: auto
-    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mg_cdn.yunjisuan.cf
-  - &id021
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 172.67.217.144
-    port: 80
-    cipher: auto
-    uuid: 85674552-ce41-44d9-bb2a-50f76450b3d8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: lv1.xv2ray.net
-  - &id022
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 172.67.187.109
-    port: 80
-    cipher: auto
-    uuid: 2e87cebc-977b-4fec-b079-b1ddc55b19c8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ee1.xv2ray.net
-  - &id023
-    name: 🇺🇸_US_美国_8
+    name: 🇺🇸_US_美国_3
     type: vmess
     server: 104.21.32.215
     port: 8880
@@ -264,13 +204,34 @@ proxies:
       path: /
       headers:
         host: a3.bcbot.in
-  - &id024
-    name: 🇺🇸_US_美国_9
+  - &id019
+    name: 🇫🇷_FR_法国_2
+    type: ss
+    server: 145.239.6.202
+    port: 4444
+    password: pKEW8JPByTVTLtM
+    cipher: aes-256-gcm
+  - &id020
+    name: 🇷🇴_RO_罗马尼亚
+    type: ss
+    server: 194.14.217.115
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id021
+    name: 🇺🇸_US_美国_4
+    type: ss
+    server: 74.121.191.98
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id022
+    name: 🇺🇸_US_美国_5
     type: vmess
-    server: 132.145.132.227
-    port: 37121
+    server: a3.bcbot.in
+    port: 8880
     cipher: auto
-    uuid: 93845b50-26f6-4203-f5ad-4d231d4e8f45
+    uuid: ce9aadc8-8c6e-4867-d247-9a84b469ac27
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -278,36 +239,125 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: 132.145.132.227
+        host: a3.bcbot.in
+  - &id023
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+    type: vless
+    server: 172.67.79.156
+    port: 443
+    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
+    tls: true
+    servername: xray1.freegradely.xyz
+    network: ws
+    ws-opts:
+      path: /bodhws
+  - &id024
+    name: 🇺🇸_US_美国_6
+    type: vless
+    server: 104.21.51.242
+    port: 2087
+    uuid: 4e963830-b7bf-4b16-98ed-dc2df7702d4b
+    tls: true
+    servername: vpneror2.arminhadadi.site
+    network: ws
+    ws-opts:
+      path: /vless
   - &id025
-    name: 🇳🇱_NL_荷兰_3
+    name: 🇬🇧_GB_英国_1
+    type: ss
+    server: 77.72.5.113
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id026
+    name: 🇳🇱_NL_荷兰
+    type: ss
+    server: 51.15.27.48
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id027
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
+    type: vless
+    server: 162.159.3.4
+    port: 443
+    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
+    tls: true
+    servername: xray1.freegradely.xyz
+    network: ws
+    ws-opts:
+      path: /bodhws
+  - &id028
+    name: 🇨🇦_CA_加拿大
+    type: vless
+    server: 23.227.38.24
+    port: 443
+    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
+    tls: true
+    servername: xray1.freegradely.xyz
+    network: ws
+    ws-opts:
+      path: /bodhws
+  - &id029
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_7
+    type: vless
+    server: 104.25.70.62
+    port: 443
+    uuid: 9016f911-e576-4c5e-d85c-f3144633021e
+    tls: true
+    servername: 4ash.vipjnamasha.store
+    network: ws
+    ws-opts:
+      path: /apiapp
+  - &id030
+    name: 🇺🇸_US_美国_7
+    type: vless
+    server: 104.21.4.4
+    port: 8443
+    uuid: 6feba7de-09e1-4031-9d40-074a764839c7
+    tls: true
+    servername: ssl.v2vpnchannel.website
+    network: ws
+    ws-opts:
+      path: /vless
+  - &id031
+    name: 🇺🇸_US_美国->🇬🇮_GI_直布罗陀
+    type: vless
+    server: 172.67.192.61
+    port: 2087
+    uuid: 4e963830-b7bf-4b16-98ed-dc2df7702d4b
+    tls: true
+    servername: vpneror2.arminhadadi.site
+    network: ws
+    ws-opts:
+      path: /vless
+  - &id032
+    name: 🇺🇸_US_美国_8
     type: vmess
-    server: 91.242.229.69
-    port: 2086
+    server: 172.67.217.144
+    port: 80
     cipher: auto
-    uuid: 88c216b8-56c6-4f34-bcfd-e198ce11f7d6
+    uuid: 85674552-ce41-44d9-bb2a-50f76450b3d8
     alterId: 0
     tls: false
     skip-cert-verify: true
-    servername: nl1.xv2ray.net
     network: ws
     ws-opts:
-      path: /vmess
-  - &id026
-    name: 🇩🇪_DE_德国
-    type: trojan
-    server: 3.79.162.137
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id027
-    name: 🇺🇸_US_美国_10
+      path: /
+      headers:
+        host: lv1.xv2ray.net
+  - &id033
+    name: 🇬🇧_GB_英国_2
+    type: ss
+    server: 5.181.27.97
+    port: 15100
+    password: GeZbX4Enoc
+    cipher: aes-256-gcm
+  - &id034
+    name: 🇺🇸_US_美国_9
     type: vmess
-    server: www.visa.com.tw
-    port: 8880
+    server: 104.17.184.241
+    port: 80
     cipher: auto
     uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
     alterId: 0
@@ -317,7 +367,17 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: mgthree_cdn.yunjisuan.cf
+        host: mg_cdn.yunjisuan.cf
+  - &id035
+    name: 🇫🇷_FR_法国_3
+    type: trojan
+    server: 13.38.208.28
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -371,6 +431,14 @@ proxy-groups:
       - *id025
       - *id026
       - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -403,6 +471,14 @@ proxy-groups:
       - *id025
       - *id026
       - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
   - name: SELECT
     type: select
     proxies:
@@ -433,6 +509,14 @@ proxy-groups:
       - *id025
       - *id026
       - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
