--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,187 +6,121 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
+    name: 🇩🇪_DE_德国_1
     type: trojan
-    server: xibaozi.19890604.day
-    port: 10845
+    server: 5.104.108.120
+    port: 443
     udp: true
-    password: 8c20a85b-f70f-48aa-a607-92d57eddc92f
-    sni: cloudflare.node-ssl.cdn-alibaba.com
+    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
+    sni: 20-24-33-134.nhost.00cdn.com
     skip-cert-verify: true
     network: tcp
   - &id002
-    name: 🇨🇳_CN_中国->🇨🇿_CZ_捷克
+    name: 🇺🇸_US_美国_1
     type: trojan
-    server: xibaozi.19890604.day
-    port: 10846
+    server: 89.116.180.158
+    port: 443
     udp: true
-    password: 8c20a85b-f70f-48aa-a607-92d57eddc92f
-    sni: cloudflare.node-ssl.cdn-alibaba.com
+    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
+    sni: 3us2.pqjc.buzz
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /pq/us2
+      headers:
+        host: 3us2.pqjc.buzz
   - &id003
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    name: 🇺🇸_US_美国_2
     type: trojan
-    server: xibaozi.19890604.day
-    port: 10838
+    server: 89.116.180.179
+    port: 443
     udp: true
-    password: 8c20a85b-f70f-48aa-a607-92d57eddc92f
-    sni: cloudflare.node-ssl.cdn-alibaba.com
+    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
+    sni: p6us4.pqjc.buzz
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /pq/us4
+      headers:
+        host: p6us4.pqjc.buzz
   - &id004
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    name: 🇩🇪_DE_德国_2
     type: trojan
-    server: xibaozi.19890604.day
-    port: 10850
+    server: 5.104.108.109
+    port: 443
     udp: true
-    password: 8c20a85b-f70f-48aa-a607-92d57eddc92f
-    sni: cloudflare.node-ssl.cdn-alibaba.com
+    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
+    sni: 20-24-33-134.nhost.00cdn.com
     skip-cert-verify: true
     network: tcp
   - &id005
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    name: 🇺🇸_US_美国_3
+    type: trojan
+    server: 89.116.161.133
+    port: 443
+    udp: true
+    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
+    sni: p1us1.pqjc.buzz
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /pq/us1
+      headers:
+        host: p1us1.pqjc.buzz
+  - &id006
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 35.87.209.22
+    port: 13489
+    cipher: auto
+    uuid: 61761e55-dff5-4f94-f75f-b0a4718bba98
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id007
+    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
     type: trojan
     server: xibaozi.19890604.day
-    port: 10837
+    port: 10848
     udp: true
-    password: 8c20a85b-f70f-48aa-a607-92d57eddc92f
+    password: c71b7574-aeaa-40f0-989b-47f3fe7ac85a
     sni: cloudflare.node-ssl.cdn-alibaba.com
     skip-cert-verify: true
     network: tcp
-  - &id006
+  - &id008
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10847
+    udp: true
+    password: c71b7574-aeaa-40f0-989b-47f3fe7ac85a
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id009
     name: 🇨🇳_CN_中国->🇮🇳_IN_印度
     type: ss
     server: service.ouluyun9803.com
     port: 21003
     password: cfa17a0d-5e7d-4871-976e-f116e0818123
     cipher: chacha20-ietf-poly1305
-  - &id007
-    name: 🇰🇷_KR_韩国
-    type: trojan
-    server: 103.214.68.57
-    port: 10003
-    udp: true
-    password: 6x8HcghsjS
-    sni: yes998.chickenkiller.com
-    skip-cert-verify: true
-    network: tcp
-  - &id008
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
-    type: trojan
-    server: 209.46.30.106
-    port: 443
-    udp: true
-    password: 9fec66cf-1006-4c74-acc5-601fdf8a71b9
-    sni: nl4.djjc.sbs
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /djjc/nl1
-      headers:
-        host: nl4.djjc.sbs
-  - &id009
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-    type: trojan
-    server: 167.68.11.221
-    port: 443
-    udp: true
-    password: 9fec66cf-1006-4c74-acc5-601fdf8a71b9
-    sni: k6us3.djjc.sbs
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /djjc/us3
-      headers:
-        host: k6us3.djjc.sbs
   - &id010
-    name: 🇷🇺_RU_俄罗斯联邦->🇩🇪_DE_德国
+    name: 🇺🇸_US_美国_5
     type: trojan
-    server: 185.176.24.105
+    server: 167.68.5.183
     port: 443
     udp: true
-    password: 9fec66cf-1006-4c74-acc5-601fdf8a71b9
-    sni: k9de1.djjc.sbs
+    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
+    sni: 6us3.pqjc.buzz
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /djjc/de1
+      path: /pq/us3
       headers:
-        host: k9de1.djjc.sbs
+        host: 6us3.pqjc.buzz
   - &id011
-    name: 🇬🇧_GB_英国
-    type: vmess
-    server: 172.99.190.109
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: linkvws
-  - &id012
-    name: 🇱🇺_LU_卢森堡->🇨🇦_CA_加拿大
-    type: trojan
-    server: 188.42.145.11
-    port: 443
-    udp: true
-    password: 9fec66cf-1006-4c74-acc5-601fdf8a71b9
-    sni: k2us2.djjc.sbs
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /djjc/us2
-      headers:
-        host: k2us2.djjc.sbs
-  - &id013
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-    type: trojan
-    server: 209.46.30.206
-    port: 443
-    udp: true
-    password: 9fec66cf-1006-4c74-acc5-601fdf8a71b9
-    sni: k9us1.djjc.sbs
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /djjc/us1
-      headers:
-        host: k9us1.djjc.sbs
-  - &id014
-    name: 🇱🇺_LU_卢森堡->🇹🇷_TR_土耳其
-    type: vmess
-    server: 202.78.162.6
-    port: 80
-    cipher: auto
-    uuid: 66fef53b-1b57-466d-89a4-bd99b90f6473
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@forwardv2ray
-      headers:
-        host: irisoft.servecounterstrike.com
-  - &id015
-    name: 🇨🇦_CA_加拿大
-    type: vmess
-    server: 142.171.237.214
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/221312281009
-      headers:
-        host: www.23168499.xyz
-  - &id016
-    name: 🇺🇸_US_美国_1
+    name: 🇺🇸_US_美国_6
     type: vmess
     server: 95.164.46.154
     port: 8080
@@ -198,61 +132,8 @@ proxies:
     network: ws
     ws-opts:
       path: /vmess
-  - &id017
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 162.159.135.221
-    port: 80
-    cipher: auto
-    uuid: fa828efe-ff0a-4afd-a4cb-245cf65432ee
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: us.baipiao.fixddns.store
-  - &id018
-    name: 🇪🇸_ES_西班牙
-    type: trojan
-    server: 65.20.102.54
-    port: 443
-    udp: true
-    password: 842b5f9dd11e458d8613c907c4cc5723
-    sni: www.gpt123.one
-    skip-cert-verify: true
-    network: tcp
-  - &id019
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 94.131.117.159
-    port: 80
-    cipher: auto
-    uuid: 72b3b89a-30c5-4dc7-8b6e-f61218b95eda
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id020
-    name: 🇩🇪_DE_德国->🇫🇷_FR_法国
-    type: vmess
-    server: yx.zhke.cf
-    port: 443
-    cipher: auto
-    uuid: 3b89f882-0c3f-4144-811d-91fce7ab3c05
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /D26xvdqUdCpvvPTz4R
-      headers:
-        host: h196-fr.kxnn.eu.org
-  - &id021
-    name: 🇺🇸_US_美国_4
+  - &id012
+    name: 🇺🇸_US_美国_7
     type: vmess
     server: 94.131.13.110
     port: 80
@@ -266,6 +147,42 @@ proxies:
       path: /vmess
       headers:
         host: lt1-vmess.sshmax.xyz
+  - &id013
+    name: 🇨🇭_CH_瑞士
+    type: vmess
+    server: 94.131.99.8
+    port: 47182
+    cipher: auto
+    uuid: 81b2b630-8b6a-404f-b996-b12f13db5786
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇰🇷_KR_韩国
+    type: trojan
+    server: 103.214.68.57
+    port: 10003
+    udp: true
+    password: 6x8HcghsjS
+    sni: yes998.chickenkiller.com
+    skip-cert-verify: true
+    network: tcp
+  - &id015
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国
+    type: vmess
+    server: s1c.v2.v001sss.xyz
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
 proxy-groups:
   - name: PROXY
     type: select
@@ -307,12 +224,6 @@ proxy-groups:
       - *id013
       - *id014
       - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -333,12 +244,6 @@ proxy-groups:
       - *id013
       - *id014
       - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
   - name: SELECT
     type: select
     proxies:
@@ -357,12 +262,6 @@ proxy-groups:
       - *id013
       - *id014
       - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
